# sistema_ETL

./: .env  .gitignore  Jenkinsfile  README.md  docker-compose.yml  extract.py  pyproject.toml
data/csv/: testando_csv.csv  testando_json.csv  teste1.csv
data/json/: arquivo_teste1.json  data-JubGY4cJKUL8qN_T_geis.json  json1.json  testando_json.json  tst.json  weste.json
jenkins/: load.py  transform.py
src/: create_faker_data.py  etl.py  etl_json.py  json1.json  main.py  teste.py  weste.json
src/backend/: etl.py  extract.py  load.py  main.py  transform.py
src/backend/create_data/: create_faker_data.py
src/etl_process/: extract.py
src/frontend/: app.py
src/pipeline/: load.py  transform.py
tests/: test_app.py  test_generator.py  teste.py
