[tool.poetry]
name = "sistema-etl"
version = "0.1.0"
description = ""
authors = ["Calel95 <borgescalel@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.2"
faker = "^28.4.1"
tqdm = "^4.66.5"
pyarrow = "^17.0.0"
pytest = "^8.3.3"
streamlit = "^1.38.0"
openpyxl = "^3.1.5"
openai = "^1.52.1"
python-dotenv = "^1.0.1"
mkdocs = "^1.6.1"
duckdb = "^1.1.3"
fsspec = "^2024.10.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
